// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/admin_user_card/admin_user_card should match default snapshot 1`] = `
<div>
  <div
    class="AdminUserCard"
    data-testid="adminUserCard"
  >
    <div
      class="AdminUserCard__header"
      data-testid="adminUserCard-header"
    >
      <div
        class="AdminUserCard__picture"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none admin-user-card"
          style="border-radius: 50%; width: 128px; height: 128px;"
        >
          <span
            class="profile-icon "
            data-testid="profile-icon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </button>
      </div>
      <div
        class="AdminUserCard__user-info"
        data-testid="adminUserCard-userInfo"
      >
        <span>
          Jim
           
          Halpert
        </span>
        <span>
           • 
        </span>
        <span
          class="AdminUserCard__user-nickname"
          data-testid="adminUserCard-userNickname"
        >
          Big Tuna
        </span>
      </div>
      <div
        class="AdminUserCard__user-id"
        data-testid="adminUserCard-userId"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
      data-testid="adminUserCard-body"
    />
    <div
      class="AdminUserCard__footer"
      data-testid="adminUserCard-footer"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
    data-testid="adminUserCard"
  >
    <div
      class="AdminUserCard__header"
      data-testid="adminUserCard-header"
    >
      <div
        class="AdminUserCard__picture"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none admin-user-card"
          style="border-radius: 50%; width: 128px; height: 128px;"
        >
          <span
            class="profile-icon "
            data-testid="profile-icon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </button>
      </div>
      <div
        class="AdminUserCard__user-info"
        data-testid="adminUserCard-userInfo"
      >
        <span>
           
        </span>
        <span
          class="AdminUserCard__user-nickname"
          data-testid="adminUserCard-userNickname"
        >
          Big Tuna
        </span>
      </div>
      <div
        class="AdminUserCard__user-id"
        data-testid="adminUserCard-userId"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
      data-testid="adminUserCard-body"
    />
    <div
      class="AdminUserCard__footer"
      data-testid="adminUserCard-footer"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name or nickname is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
    data-testid="adminUserCard"
  >
    <div
      class="AdminUserCard__header"
      data-testid="adminUserCard-header"
    >
      <div
        class="AdminUserCard__picture"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none admin-user-card"
          style="border-radius: 50%; width: 128px; height: 128px;"
        >
          <span
            class="profile-icon "
            data-testid="profile-icon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </button>
      </div>
      <div
        class="AdminUserCard__user-info"
        data-testid="adminUserCard-userInfo"
      >
        <span>
           
        </span>
        <span
          class="AdminUserCard__user-nickname"
          data-testid="adminUserCard-userNickname"
        />
      </div>
      <div
        class="AdminUserCard__user-id"
        data-testid="adminUserCard-userId"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
      data-testid="adminUserCard-body"
    />
    <div
      class="AdminUserCard__footer"
      data-testid="adminUserCard-footer"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no nickname is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
    data-testid="adminUserCard"
  >
    <div
      class="AdminUserCard__header"
      data-testid="adminUserCard-header"
    >
      <div
        class="AdminUserCard__picture"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none admin-user-card"
          style="border-radius: 50%; width: 128px; height: 128px;"
        >
          <span
            class="profile-icon "
            data-testid="profile-icon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </button>
      </div>
      <div
        class="AdminUserCard__user-info"
        data-testid="adminUserCard-userInfo"
      >
        <span>
          Jim
           
          Halpert
        </span>
        <span
          class="AdminUserCard__user-nickname"
          data-testid="adminUserCard-userNickname"
        />
      </div>
      <div
        class="AdminUserCard__user-id"
        data-testid="adminUserCard-userId"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
      data-testid="adminUserCard-body"
    />
    <div
      class="AdminUserCard__footer"
      data-testid="adminUserCard-footer"
    />
  </div>
</div>
`;
